[gd_scene load_steps=28 format=3 uid="uid://8csbag6qoqu"]

[ext_resource type="Script" path="res://prototype/character_controller type/2d movement procedural/character_rigidbody.gd" id="1_wftwj"]
[ext_resource type="Script" path="res://prototype/character_controller type/2d movement procedural/movement_2d_component.gd" id="2_g5gvu"]
[ext_resource type="Script" path="res://prototype/character_controller type/2d movement procedural/input_control.gd" id="3_8rh61"]

[sub_resource type="BoxMesh" id="BoxMesh_pd3eh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3a4m2"]
size = Vector2(1263, 61)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cwj6p"]
height = 22.0

[sub_resource type="BoxMesh" id="BoxMesh_yw50y"]

[sub_resource type="Gradient" id="Gradient_3yntw"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.862745, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_07bue"]
gradient = SubResource("Gradient_3yntw")

[sub_resource type="CylinderMesh" id="CylinderMesh_kkefa"]
top_radius = 0.45
bottom_radius = 0.35
height = 1.2

[sub_resource type="SphereMesh" id="SphereMesh_63tb0"]
radius = 1.0
height = 2.0

[sub_resource type="Gradient" id="Gradient_tfe1f"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 1, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_3rfmg"]
gradient = SubResource("Gradient_tfe1f")

[sub_resource type="CapsuleMesh" id="CapsuleMesh_jfphj"]
radius = 0.375
height = 1.0
radial_segments = 4
rings = 4

[sub_resource type="SphereMesh" id="SphereMesh_4ug4u"]
radius = 0.2
height = 0.55
radial_segments = 8
rings = 8

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_ohkyu"]
target_nodepath = NodePath("../../target_node/target_l")
joint_one_bone_idx = 1
joint_one_bone2d_node = NodePath("hip_l/thigh_l")
joint_two_bone_idx = 2
joint_two_bone2d_node = NodePath("hip_l/thigh_l/shin_l")

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_wck04"]
target_nodepath = NodePath("../../target_node/target_r")
joint_one_bone_idx = 5
joint_one_bone2d_node = NodePath("hip_r/thigh_r")
joint_two_bone_idx = 6
joint_two_bone2d_node = NodePath("hip_r/thigh_r/shin_r")

[sub_resource type="SkeletonModificationStack2D" id="SkeletonModificationStack2D_bqsk2"]
enabled = true
modification_count = 2
modifications/0 = SubResource("SkeletonModification2DTwoBoneIK_ohkyu")
modifications/1 = SubResource("SkeletonModification2DTwoBoneIK_wck04")

[sub_resource type="SkeletonModification2DJiggle" id="SkeletonModification2DJiggle_1encl"]
target_nodepath = NodePath("../torso/target_tail")
jiggle_data_chain_length = 2
use_gravity = true
use_colliders = true
collision_mask = 1
joint_data/0/bone_index = 0
joint_data/0/bone2d_node = NodePath("Bone2D")
joint_data/0/override_defaults = false
joint_data/1/bone_index = 1
joint_data/1/bone2d_node = NodePath("Bone2D/Bone2D")
joint_data/1/override_defaults = false

[sub_resource type="SkeletonModificationStack2D" id="SkeletonModificationStack2D_5pr4a"]
enabled = true
modification_count = 1
modifications/0 = SubResource("SkeletonModification2DJiggle_1encl")

[sub_resource type="Gradient" id="Gradient_ap3g4"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(1, 1, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_yo3y6"]
gradient = SubResource("Gradient_ap3g4")

[sub_resource type="SphereMesh" id="SphereMesh_kppr1"]
radius = 1.0
height = 2.0

[sub_resource type="Gradient" id="Gradient_fjv72"]
offsets = PackedFloat32Array(0.00521512)
colors = PackedColorArray(0.819001, 0.000238199, 0.484216, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_hh3jw"]
gradient = SubResource("Gradient_fjv72")
width = 72
height = 72

[sub_resource type="Gradient" id="Gradient_5tl1j"]
offsets = PackedFloat32Array(0.00521512)
colors = PackedColorArray(0.629157, 0.0880656, 0.940542, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_byaiu"]
gradient = SubResource("Gradient_5tl1j")
width = 72
height = 72

[node name="root" type="Node2D"]

[node name="bg" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1600.0
offset_bottom = 900.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="bg"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ground" type="StaticBody2D" parent="."]
position = Vector2(292, 836)

[node name="MeshInstance2D" type="MeshInstance2D" parent="ground"]
position = Vector2(630.75, 2.24999)
scale = Vector2(1262.5, 1)
mesh = SubResource("BoxMesh_pd3eh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ground"]
position = Vector2(631.5, 34.5)
shape = SubResource("RectangleShape2D_3a4m2")

[node name="character" type="RigidBody2D" parent="." node_paths=PackedStringArray("levitation_raycast")]
position = Vector2(454, 291)
gravity_scale = 2.0
script = ExtResource("1_wftwj")
levitation_raycast = NodePath("RayCast2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="character"]
shape = SubResource("CapsuleShape2D_cwj6p")

[node name="RayCast2D" type="RayCast2D" parent="character"]

[node name="ray_target" type="MeshInstance2D" parent="character/RayCast2D"]
position = Vector2(-53, 31)
scale = Vector2(6.5, 6.5)
mesh = SubResource("BoxMesh_yw50y")
texture = SubResource("GradientTexture2D_07bue")

[node name="torso" type="MeshInstance2D" parent="character"]
scale = Vector2(20, 15)
mesh = SubResource("CylinderMesh_kkefa")

[node name="target_tail" type="MeshInstance2D" parent="character/torso"]
visible = false
position = Vector2(-2.2, 1.4)
scale = Vector2(0.424773, 0.566365)
mesh = SubResource("SphereMesh_63tb0")
texture = SubResource("GradientTexture2D_3rfmg")

[node name="head" type="MeshInstance2D" parent="character/torso"]
position = Vector2(0, -1.33333)
scale = Vector2(0.9, 1.2)
mesh = SubResource("CapsuleMesh_jfphj")

[node name="hand_r" type="MeshInstance2D" parent="character/torso"]
position = Vector2(-1, 0)
mesh = SubResource("SphereMesh_4ug4u")

[node name="hand_l" type="MeshInstance2D" parent="character/torso"]
position = Vector2(1, 0)
mesh = SubResource("SphereMesh_4ug4u")

[node name="movement" type="Node" parent="character"]
script = ExtResource("2_g5gvu")
max_speed = 200.0
acceleration = 400.0

[node name="input" type="Node" parent="character"]
script = ExtResource("3_8rh61")

[node name="leg" type="Skeleton2D" parent="character"]
modification_stack = SubResource("SkeletonModificationStack2D_bqsk2")

[node name="hip_l" type="Bone2D" parent="character/leg"]
position = Vector2(0, 7)
rest = Transform2D(1, 0, 0, 1, 0, 7)
auto_calculate_length_and_angle = false
length = 8.0
bone_angle = 0.0

[node name="thigh_l" type="Bone2D" parent="character/leg/hip_l"]
position = Vector2(4, 0)
rotation = -0.555494
rest = Transform2D(1, 0, 0, 1, 5, 0)
auto_calculate_length_and_angle = false
length = 10.0
bone_angle = 90.0
metadata/_local_pose_override_enabled_ = true

[node name="shin_l" type="Bone2D" parent="character/leg/hip_l/thigh_l"]
position = Vector2(0, 10)
rest = Transform2D(1, 0, 0, 1, 0, 10)
auto_calculate_length_and_angle = false
length = 10.0
bone_angle = 90.0
metadata/_local_pose_override_enabled_ = true

[node name="Line2D" type="Line2D" parent="character/leg/hip_l/thigh_l/shin_l"]
position = Vector2(0.122498, 13.707)
points = PackedVector2Array(0.183777, -13.4157, -0.398193, -3.58365)
width = 4.0

[node name="foot_l" type="Bone2D" parent="character/leg/hip_l/thigh_l/shin_l"]
position = Vector2(0, 10)
rest = Transform2D(1, 0, 0, 1, 0, 10)
auto_calculate_length_and_angle = false
length = 2.0
bone_angle = 0.0

[node name="Line2D" type="Line2D" parent="character/leg/hip_l/thigh_l"]
position = Vector2(0.122498, 13.707)
points = PackedVector2Array(0.183777, -13.4157, -0.398193, -3.58365)
width = 4.0

[node name="hip_r" type="Bone2D" parent="character/leg"]
position = Vector2(0, 7)
rest = Transform2D(1, 0, 0, 1, 0, 7)
auto_calculate_length_and_angle = false
length = 8.0
bone_angle = 180.0

[node name="thigh_r" type="Bone2D" parent="character/leg/hip_r"]
position = Vector2(-4, 0)
rotation = 0.453339
rest = Transform2D(1, 0, 0, 1, -5, 0)
auto_calculate_length_and_angle = false
length = 10.0
bone_angle = 90.0
metadata/_local_pose_override_enabled_ = true

[node name="shin_r" type="Bone2D" parent="character/leg/hip_r/thigh_r"]
position = Vector2(0, 10)
rest = Transform2D(1, 0, 0, 1, 0, 10)
auto_calculate_length_and_angle = false
length = 10.0
bone_angle = 90.0
metadata/_local_pose_override_enabled_ = true

[node name="Line2D" type="Line2D" parent="character/leg/hip_r/thigh_r/shin_r"]
points = PackedVector2Array(-0.284729, -0.155167, -0.284729, -0.155167, -0.189819, 10.615, -0.284729, -0.155167)
width = 4.0

[node name="foot_r" type="Bone2D" parent="character/leg/hip_r/thigh_r/shin_r"]
position = Vector2(0, 10)
rest = Transform2D(1, 0, 0, 1, 0, 10)
auto_calculate_length_and_angle = false
length = 2.0
bone_angle = 180.0

[node name="Line2D" type="Line2D" parent="character/leg/hip_r/thigh_r"]
points = PackedVector2Array(-0.284729, -0.155167, -0.284729, -0.155167, -0.189819, 10.615, -0.284729, -0.155167)
width = 4.0

[node name="Skeleton2D" type="Skeleton2D" parent="character"]
position = Vector2(0, 4)
modification_stack = SubResource("SkeletonModificationStack2D_5pr4a")

[node name="Bone2D" type="Bone2D" parent="character/Skeleton2D"]
rest = Transform2D(1, 0, 0, 1, 0, 0)
auto_calculate_length_and_angle = false
length = 16.0
bone_angle = 180.0
metadata/_local_pose_override_enabled_ = true

[node name="Bone2D" type="Bone2D" parent="character/Skeleton2D/Bone2D"]
position = Vector2(-10, 0)
rest = Transform2D(1, 0, 0, 1, 0, 0)
auto_calculate_length_and_angle = false
length = 16.0
bone_angle = 180.0
metadata/_local_pose_override_enabled_ = true

[node name="Line2D" type="Line2D" parent="character/Skeleton2D/Bone2D/Bone2D"]
points = PackedVector2Array(0, 0, -16, 0)
width = 2.0

[node name="Line2D" type="Line2D" parent="character/Skeleton2D/Bone2D"]
points = PackedVector2Array(0, 0, -10, 0)
width = 2.0

[node name="target_node" type="Node2D" parent="."]

[node name="target_r" type="MeshInstance2D" parent="target_node"]
position = Vector2(433, 337)
scale = Vector2(5, 5)
mesh = SubResource("SphereMesh_63tb0")
texture = SubResource("GradientTexture2D_3rfmg")

[node name="step_r" type="MeshInstance2D" parent="target_node"]
position = Vector2(494, 359)
scale = Vector2(5, 5)
mesh = SubResource("SphereMesh_63tb0")
texture = SubResource("GradientTexture2D_yo3y6")

[node name="target_l" type="MeshInstance2D" parent="target_node"]
position = Vector2(474, 327)
scale = Vector2(5, 5)
mesh = SubResource("SphereMesh_kppr1")
texture = SubResource("GradientTexture2D_hh3jw")

[node name="step_l" type="MeshInstance2D" parent="target_node"]
scale = Vector2(5, 5)
mesh = SubResource("SphereMesh_kppr1")
texture = SubResource("GradientTexture2D_byaiu")
